# Bash-Elbalad

./: .gitignore  CMakeLists.txt  Command_List_Documentation.txt  README.md  TODO.md  command.h  data.h  general_commands.h  helper_functions.h  history.txt  input_and_history.h  main.cpp
dir1/dir2/: basha.txt
